@@ -1196,7 +1196,7 @@ public class PDFParser extends BaseWatchable {
 
         switch (t.type) {
             case Tok.NUM:
-                return new Double(tok.value);
+                return Double.valueOf( tok.value);
             case Tok.STR:
             // the fall-through is intended!
             case Tok.NAME:
@@ -1289,12 +1289,12 @@ public class PDFParser extends BaseWatchable {
         if (imObj != null && imObj.getBooleanValue()) {
             // [PATCHED by michal.busta@gmail.com] - default value according to PDF spec. is [0, 1]
             // there is no need to swap array - PDF image should handle this values
-            Double[] decode = {new Double(0), new Double(1)};
+            Double[] decode = {0.0, 0.0};
 
             PDFObject decodeObj = hm.get("Decode");
             if (decodeObj != null) {
-                decode[0] = new Double(decodeObj.getAt(0).getDoubleValue());
-                decode[1] = new Double(decodeObj.getAt(1).getDoubleValue());
+                decode[0] = decodeObj.getAt(0).getDoubleValue();
+                decode[1] = decodeObj.getAt(1).getDoubleValue();
             }
 
             hm.put("Decode", new PDFObject(decode));
